# max-hermes-plugin

./: .gitignore  LICENSE  README.md  adapter.py  plugin.yaml  pyproject.toml
